# pglite-rs

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
.dev/: project.md
.dev/changes/implement-pglite-v1/: analysis.md  blueprint.md  design.md  proposal.md  tasks.md
.dev/changes/implement-pglite-v1/specs/engine-build/: spec.md
.dev/changes/implement-pglite-v1/specs/ffi-abi/: spec.md
.dev/changes/implement-pglite-v1/specs/host-layer/: spec.md
.dev/changes/multiple-process-mode/: analysis.md  blueprint.md  design.md  proposal.md  tasks.md
.dev/changes/multiple-process-mode/specs/multiple-process/: spec.md
.dev/changes/replica-hardening/: analysis.md  blueprint.md  design.md  proposal.md  tasks.md
.dev/changes/replica-hardening/specs/replica/: spec.md
.dev/changes/replica-mode/: analysis.md  blueprint.md  design.md  proposal.md  tasks.md  zero-reference.md
.dev/changes/replica-mode/specs/replica/: spec.md
.dev/changes/socket-orm-connectivity/: analysis.md  blueprint.md  design.md  proposal.md  tasks.md
.dev/changes/socket-orm-connectivity/specs/multiple-process/: spec.md
.dev/changes/socket-orm-connectivity/specs/socket/: spec.md
.dev/changes/v1-2-engine-parity/: analysis.md  blueprint.md  design.md  proposal.md  tasks.md
.dev/changes/v1-2-engine-parity/specs/build-pipeline/: spec.md
.dev/changes/v1-2-engine-parity/specs/host-api/: spec.md
.github/workflows/: artifacts.yml  ci.yml  release.yml
crates/cache-server/: Cargo.toml
crates/cache-server/src/: api.rs  cache.rs  cdc.rs  classify.rs  di.rs  diff.rs  error.rs  lib.rs  live.rs  main.rs  rows.rs  setup.rs  shapelog.rs  upstream.rs  version.rs
crates/cache-server/src/http/: health.rs  live.rs  mod.rs  query.rs  server.rs  shape.rs
crates/cache-server/src/tests/: mod.rs
crates/lib-aarch64-apple-darwin/: Cargo.toml  build.rs
crates/lib-aarch64-apple-darwin/src/: lib.rs
crates/lib-aarch64-unknown-linux-gnu/: Cargo.toml
crates/lib-aarch64-unknown-linux-gnu/src/: lib.rs
crates/lib-x86_64-apple-darwin/: Cargo.toml
crates/lib-x86_64-apple-darwin/src/: lib.rs
crates/lib-x86_64-pc-windows-gnu/: Cargo.toml
crates/lib-x86_64-pc-windows-gnu/src/: lib.rs
crates/lib-x86_64-unknown-linux-gnu/: Cargo.toml
crates/lib-x86_64-unknown-linux-gnu/src/: lib.rs
crates/pglite/: Cargo.toml  build.rs
crates/pglite-sys/: Cargo.toml  LICENSE  build.rs
crates/pglite-sys/src/: lib.rs
crates/pglite-sys/tests/: linkage.rs
crates/pglite/examples/: basic.rs
crates/pglite/src/: db.rs  engine.rs  error.rs  lib.rs  row.rs  transaction.rs
crates/pglite/src/live/: mod.rs  tables.rs
crates/pglite/src/multiple_process/: mod.rs  notify.rs  pool.rs
crates/pglite/src/replica/: backfill.rs  meta.rs  mod.rs  pgoutput.rs  tls.rs  wire.rs
crates/pglite/src/socket/: mod.rs
crates/pglite/tests/: copy.rs  crud.rs  dumprestore.rs  extensions.rs  live.rs  locale.rs  multiprocess.rs  multiprocess_concurrency.rs  notify.rs  options.rs  persistence.rs  replica.rs  replica_access_control.rs  replica_published_shape.rs  simple_query.rs  socket_gateway.rs  tempclean.rs  transactions.rs
examples/: Cargo.toml  build.rs  run-replica-demo.sh
native/: build-extensions.sh  build-libpglite.sh  build-smoke.sh  pglite_native.c  pglite_native.h  pglite_reset.c  pglite_static_ext.c  relocate-runtime.sh  smoke.c
native/patches/: 0001-export-process-startup-packet-native.patch  0002-shmem-reset-native.patch  0003-static-fd-reset-native.patch  0004-recv-send-null-guard-native.patch  0005-runtime-gate-checkpoint-skips-native.patch  0006-win32-compat-native.patch  0007-win32-socket-pgl-route-native.patch  0008-win32-system-decl-native.patch  0009-win32-allow-admin-pglite-native.patch  0010-win32-fake-socket-events-native.patch  0011-win32-static-ext-dlopen-native.patch  0012-win32-pglite-setjmp-native.patch
