[package]
name = "cache-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cache_server"

[[bin]]
name = "cache-server"
path = "src/main.rs"

[dependencies]
pglite-rs = { path = "../pglite", features = ["replica", "multiple-process"] }
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-postgres = "0.7"
sqlparser = { version = "0.52", features = ["visitor"] }
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
