[package]
name = "pglite-rs-lib-aarch64-apple-darwin"
description = "Prebuilt libpglite engine (in-process PostgreSQL) for aarch64-apple-darwin, used by pglite-rs-sys"
links = "pglite-lib-aarch64-apple-darwin"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["build.rs", "src", "lib", "LICENSE"]
