[package]
name = "pglite-rs-lib-aarch64-unknown-linux-gnu"
description = "Prebuilt libpglite engine (in-process PostgreSQL) for aarch64-unknown-linux-gnu, used by pglite-rs-sys"
links = "pglite-lib-aarch64-unknown-linux-gnu"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["build.rs", "src", "lib", "LICENSE"]
