[package]
name = "pglite-rs-lib-x86_64-unknown-linux-gnu"
description = "Prebuilt libpglite engine (in-process PostgreSQL) for x86_64-unknown-linux-gnu, used by pglite-rs-sys"
links = "pglite-lib-x86_64-unknown-linux-gnu"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["build.rs", "src", "lib", "LICENSE"]
