[package]
name = "pglite"
description = "In-process PostgreSQL for Rust, embedded like SQLite, async on any runtime"
build = "build.rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pglite-sys = { path = "../pglite-sys" }
futures = { version = "0.3", features = ["executor"] }
postgres-protocol = "0.6"
postgres-types = "0.2"
thiserror = "2"
libc = "0.2"
tar = "0.4"
bytes = "1"
fallible-iterator = "0.2"

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }

[features]
multiple-process = []
pgcrypto = []
pgvector = []
icu = ["pglite-sys/icu"]
